--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,7 @@
 <h1>Wildheart</h1>
+
+
+<div class="footer">
+  <a href="https://www.facebook.com/1WILDHEART/" target="_blank" class="fa fa-facebook"></a>
+  <a href="https://www.instagram.com/wildheart_ig/?hl=en" class="fa fa-instagram" target="_blank"></a>
+</div>
