--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,9 +7,15 @@ body {
 }
 
 .footer {
-  position: fixed;
   left: 0;
   bottom: 20px;
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.width-500 {
   width: 100%;
   text-align: center;
 }
