--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <nav class="navbar">
       <div class="container-fluid">
         <div class="navbar-header">
-           <%= link_to "Wildheart", root_path, class: "navbar-brand" %>
+           <span class="fancy-font"><%= link_to "wildheart", root_path, class: "navbar-brand" %></span>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li> <%= link_to "about", '/pages/about' %> </li>
@@ -25,8 +25,6 @@
         </ul>
       </div>
     </nav>
-    <div class="container">
-      <%= yield %>
-    </div>
+    <%= yield %>
   </body>
 </html>
