--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "home.jpg", class: 'width-500' %>
+<%= image_tag "crafts.jpg", class: 'width-500' %>
 
 <div class="footer">
   <a href="https://www.facebook.com/1WILDHEART/" target="_blank" class="fa fa-facebook"></a>
