--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,3 +32,42 @@ nav a {
   width: 100%;
   text-align: center;
 }
+
+.width-100 {
+  width: 300px;
+  margin-left: 15%;
+  text-align: center;
+}
+
+p.width-100 {
+  margin-top: 20px;
+}
+
+.img-rounded {
+  width: 100px;
+}
+
+.team {
+  margin-left: 20%;
+}
+
+.team-row {
+  margin-top: 20px;
+}
+
+h2 {
+  text-align: center;
+}
+
+hr {
+  width: 75%;
+}
+
+.mission {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 50%;
+}
