--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li> <%= link_to "about", '/pages/about' %> </li>
-          <li> <%= link_to "classes", '/pages/classes' %> </li>
+          <li> <%= link_to "events", '/pages/classes' %> </li>
           <li> <%= link_to "pirates&preacher", '/pages/pirates' %> </li>
           <li> <%= link_to "saintsXsociety", '/pages/st_society' %> </li>
           <li> <%= link_to "blog", '/pages/blog' %> </li>
