--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -59,6 +59,10 @@
   </div>
 </div>
 
+<!-- <div class="contact">
+  <h3>We'd love to hear from you</h3>
+</div> -->
+
 <div class="footer">
   <a href="https://www.facebook.com/1WILDHEART/" target="_blank" class="fa fa-facebook"></a>
   <a href="https://www.instagram.com/wildheart_ig/?hl=en" class="fa fa-instagram" target="_blank"></a>
