--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,15 +1,14 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import url('https://fonts.googleapis.com/css?family=Bad+Script');
-@import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Raleway');
 
 body {
-  font-family: 'Julius Sans One', sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin-bottom: 50px;
 }
 
 .fancy-font {
-  font-family: 'Bad Script', cursive;
+  font-family: 'Dancing Script', cursive;
 }
 
 a.navbar-brand {
