--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,14 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Raleway');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Quicksand|Raleway');
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   margin-bottom: 50px;
+}
+
+p {
+  font-size: 18px;
 }
 
 .fancy-font {
@@ -45,18 +49,27 @@ nav a {
   text-align: center;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 20px;
+  margin-top: 50px;
   margin-bottom: 40px;
+}
+
+#footer {
+  width: 100%;
 }
 
 .footer {
   left: 0;
   bottom: 20px;
   width: 100%;
+  height: 30px;
   text-align: center;
   margin-top: 20px;
-  margin-bottom: 20px;
+  // background-color: #eee;
 }
+//
+// a.footer {
+//   margin-bottom: 50%;
+// }
 
 .width-500 {
   width: 100%;
@@ -78,7 +91,7 @@ p.width-100 {
 }
 
 .img-rounded {
-  width: 100px;
+  width: 120px;
 }
 
 .team {
@@ -86,7 +99,20 @@ p.width-100 {
 }
 
 .team-row {
-  margin-top: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.logo {
+  text-align: center;
+}
+
+#logo {
+  width: 50%;
+}
+
+.grey-text {
+  color: grey;
 }
 
 h2 {
@@ -95,6 +121,7 @@ h2 {
 
 hr {
   width: 75%;
+  // border: 1px solid #ffe2f2 ;
 }
 
 .mission {
