--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,71 @@
-<h1>About</h1>
+<%= image_tag "crafts.jpg", class: 'width-500' %>
+
+<div class="mission">
+  <h2>Our Mission</h2>
+  <p>Our mission here at Wildheart is Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
+<div class="tiles">
+  <div class="row">
+    <div class="col-md-4">
+      <%= image_tag "crafts.jpg", class: 'width-100' %>
+      <p class="width-100">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+    <div class="col-md-4">
+      <%= image_tag "crafts.jpg", class: 'width-100' %>
+      <p class="width-100">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+    <div class="col-md-4">
+      <%= image_tag "crafts.jpg", class: 'width-100' %>
+      <p class="width-100">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+  </div>
+</div>
+
+<h2>Meet the Team</h2>
+<hr>
+<div class="team">
+  <div class="row team-row">
+    <div class="col-md-2">
+      <%= image_tag "home.jpg", class: 'img-rounded' %>
+    </div>
+    <div class="col-md-7">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+  </div>
+  <div class="row team-row">
+    <div class="col-md-7">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+    <div class="col-md-2">
+      <%= image_tag "home.jpg", class: 'img-rounded' %>
+    </div>
+  </div>
+  <div class="row team-row">
+    <div class="col-md-2">
+      <%= image_tag "home.jpg", class: 'img-rounded' %>
+    </div>
+    <div class="col-md-7">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+    </div>
+  </div>
+  <div class="row team-row">
+    <div class="col-md-7">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi..</p>
+    </div>
+    <div class="col-md-2">
+      <%= image_tag "home.jpg", class: 'img-rounded' %>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="contact">
+  <h3>We'd love to hear from you</h3>
+</div> -->
+
+
+<div class="footer">
+  <hr id="footer">
+  <a href="https://www.facebook.com/1WILDHEART/" target="_blank" class="fa fa-facebook fa-large">    </a>
+  <a href="https://www.instagram.com/wildheart_ig/?hl=en" class="fa fa-instagram fa-large" target="_blank"></a>
+</div>
