--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,15 @@ a.navbar-brand {
   font-size: 30px;
 }
 
+.small {
+  background-color: #eee;
+  height: 50px;
+}
+
+.nav {
+  margin-left: 43%;
+}
+
 blockquote {
   width: 80%;
 }
