--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -66,6 +66,6 @@
 
 <div class="footer">
   <hr id="footer">
-  <a href="https://www.facebook.com/1WILDHEART/" target="_blank" class="fa fa-facebook fa-large">    </a>
-  <a href="https://www.instagram.com/wildheart_ig/?hl=en" class="fa fa-instagram fa-large" target="_blank"></a>
+  <p class="grey-text">@wildheart  <a href="https://www.facebook.com/1WILDHEART/" target="_blank" class="fa fa-facebook fa-lg"></a>      <a href="https://www.instagram.com/wildheart_ig/?hl=en" class="fa fa-instagram fa-lg" target="_blank"></a>
+</p>
 </div>
