--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,6 +99,20 @@ p.width-100 {
   margin-top: 20px;
 }
 
+.society-guy {
+  height: 591px;
+}
+
+.society-girl {
+  height: 591px;
+}
+
+.two-pics {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
 .img-rounded {
   width: 120px;
 }
@@ -144,4 +158,9 @@ hr {
 
 .class {
   float: right;
+}
+
+.pirates-video {
+  width: 100%;
+  height: 600px;
 }
