Add collab section in saints page.

--- a/app/views/pages/st_society.html.erb
+++ b/app/views/pages/st_society.html.erb
@@ -2,3 +2,28 @@
   <%= image_tag "girl.jpeg", class: "society-girl" %>
   <%= image_tag "guy.jpeg", class: "society-guy" %>
 </div>
+
+<h2 class="title">Collaborators</h2>
+
+<div class="tiles saint-collabs">
+  <div class="row">
+    <div class="col-md-4">
+      <%= image_tag "crafts.jpg", class: 'width-100' %>
+      <p class="width-100"><span class="bold">Belinda Sheilds</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+    <div class="col-md-4">
+      <%= image_tag "crafts.jpg", class: 'width-100' %>
+      <p class="width-100"><span class="bold">Donavan Malt</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+    <div class="col-md-4">
+      <%= image_tag "crafts.jpg", class: 'width-100' %>
+      <p class="width-100"><span class="bold">Sueanne Lea</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="footer">
+  <hr id="footer">
+  <p class="grey-text">saintsXsociety   <a href="https://www.instagram.com/saintsxsociety/" class="fa fa-instagram fa-lg" target="_blank"></a></p>
+</div>
