--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,8 +7,16 @@ body {
   margin-bottom: 50px;
 }
 
+.title {
+  margin-top: 50px;
+}
+
 p {
   font-size: 18px;
+}
+
+.bold {
+  font-weight: bold;
 }
 
 .fancy-font {
@@ -22,6 +30,10 @@ a.navbar-brand {
 .small {
   background-color: #eee;
   height: 50px;
+}
+
+.saint-collabs {
+  margin-top: 30px;
 }
 
 .nav {
