--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <nav class="navbar">
       <div class="container-fluid">
         <div class="navbar-header">
-           <span class="fancy-font"><%= link_to "wildheart", root_path, class: "navbar-brand" %></span>
+           <a href="/"><%= image_tag "w-logo.png", class: "tiny-pic" %></a>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li> <%= link_to "about", '/pages/about' %> </li>
