--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -30,12 +30,12 @@
       <%= image_tag "home.jpg", class: 'img-rounded' %>
     </div>
     <div class="col-md-7">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p><span class="bold">Someone</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
   </div>
   <div class="row team-row">
     <div class="col-md-7">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+      <p><span class="bold">Someone Else</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
     </div>
     <div class="col-md-2">
       <%= image_tag "home.jpg", class: 'img-rounded' %>
@@ -46,12 +46,12 @@
       <%= image_tag "home.jpg", class: 'img-rounded' %>
     </div>
     <div class="col-md-7">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+      <p><span class="bold">Mr. Person</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
     </div>
   </div>
   <div class="row team-row">
     <div class="col-md-7">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi..</p>
+      <p><span class="bold">Mrs. Lady</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi..</p>
     </div>
     <div class="col-md-2">
       <%= image_tag "home.jpg", class: 'img-rounded' %>
