--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,10 @@
-<%= image_tag "crafts.jpg", class: 'width-500' %>
+<div class="heading_image">
+  <%= image_tag "crafts.jpg", class: 'width-500' %>
+  <div class="bottom-left">
+    <p>BE <span class="pink">WILD</span> & </p>
+    <p>          LET LOVE <span class="pink">GROW</span></p>
+  </div>
+</div>
 
 <div class="mission">
   <h2>Our Mission</h2>
