--- a/app/views/pages/classes.html.erb
+++ b/app/views/pages/classes.html.erb
@@ -1,4 +1,11 @@
-<%= image_tag "dancing.jpg", class: 'width-500 image' %>
+<div class="heading_image">
+  <%= image_tag "dancing.jpg", class: 'width-500 image' %>
+  <div class="centered">
+    <div class="text-background">
+      <p>LET'S FLAMINGLE</p>
+    </div>
+  </div>
+</div>
 
 <p class="blurp">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
 
