--- a/app/views/pages/st_society.html.erb
+++ b/app/views/pages/st_society.html.erb
@@ -1,5 +1,20 @@
 <div class="two-pics">
-  <%= image_tag "girl.jpeg", class: "society-girl" %>
+  <div class="heading_image">
+    <%= image_tag "girl.jpeg", class: "society-girl" %>
+  </div>
+  <div class="centered1">
+    <div class="text-background">
+      <p>STYLE YOUR</p>
+    </div>
+    <!-- <div class="text-background2">
+      <p>WILD HEART</p>
+    </div> -->
+  </div>
+  <div class="centered2">
+    <div class="text-background2">
+      <p>WILD HEART</p>
+    </div>
+  </div>
   <%= image_tag "guy.jpeg", class: "society-guy" %>
 </div>
 
