--- a/app/views/pages/classes.html.erb
+++ b/app/views/pages/classes.html.erb
@@ -9,9 +9,15 @@
 
 <p class="blurp">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
 
-<h2>Upcoming Events</h2>
+<div class="header">
+  <div class="top">
+    <h2>UPCOMING</h2>
+  </div>
+  <div class="bottom">
+    <h2>EVENTS</h2>
+  </div>
+</div>
 
-<hr>
 
 <div class="row">
   <div class="col-md-6">
@@ -22,11 +28,11 @@
   </div>
 </div>
 
-<h2 class="test-header">Stories</h2>
+<h2 class="test-header"><span class="block-font">TESTIMONIALS</span></h2>
 <div class="tests">
   <blockquote class="blockquote left">
-    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <footer class="blockquote-footer">Someone super awesome</footer>
+    <p class="mb-0">"Where to even begin with describing WILDHEART? This is a wonderful, heart-felt, passionate group of people who pour their souls into creating an all-inclusive, warm atmosphere that celebrates individuals from all circles of life. The intention behind WILDHEART is simple: to bring together communities through the means of the arts! By no means it is required for you to consider yourself an artist, musician, dancer, creative writer, or actor, but rather WILDHEART uses these mediums to create an atmosphere in which everyone can feel loved, supported, and free to express themselves. Every event is wonderfully planned down to the smallest details, but the ending result is always organic and quite honestly, fun! While at these events, you can expect to paint, sing, dance, meet new people, discuss art and life, or perhaps none of those things at all! WILDHEART is exactly what you make it to be and there is full free-reign on how you spend your time while there. Cheers to the creative team behind this incredible organization and cheers to their continued growth! I so look forward to seeing what the future holds."</p>
+    <footer class="blockquote-footer">Jessica Ziegelbauer</footer>
   </blockquote>
 
   <blockquote class="blockquote text-right">
