--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,14 +1,15 @@
 <div class="heading_image">
-  <%= image_tag "crafts.jpg", class: 'width-500' %>
+  <%= image_tag "mingling.jpg", class: 'width-500' %>
   <div class="bottom-left">
     <p>BE <span class="pink">WILD</span> & </p>
-    <p>          LET LOVE <span class="pink">GROW</span></p>
+    <p>LET   <span class="text-background-black">  LOVE  </span> <span class="pink">GROW</span></p>
   </div>
 </div>
-
-<div class="mission">
-  <h2>Our Mission</h2>
-  <p>Our mission here at Wildheart is Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="mission-background">
+  <div class="mission">
+    <h2 class="block-font">OUR MISSION</h2>
+    <p>Our mission here at Wildheart is Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
 </div>
 
 <div class="tiles">
@@ -28,8 +29,9 @@
   </div>
 </div>
 
-<h2>Meet the Team</h2>
-<hr>
+<div class="section-header">
+  <h2 class="block-font">MEET THE TEAM</h2>
+</div>
 <div class="team">
   <div class="row team-row">
     <div class="col-md-2">
