--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,12 +7,12 @@
 </div>
 <div class="mission-background">
   <div class="mission">
-    <h2 class="block-font">OUR MISSION</h2>
-    <p>Our mission here at Wildheart is Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h2 class="block-font title-bg">M        I        S        S        I        O        N</h2>
+    <h3>A community that ENCOURAGES and CULTIVATES the creativity that is within you.</h3>
   </div>
 </div>
 
-<div class="tiles">
+<!-- <div class="tiles">
   <div class="row">
     <div class="col-md-4">
       <%= image_tag "crafts.jpg", class: 'width-100' %>
@@ -27,42 +27,49 @@
       <p class="width-100">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
     </div>
   </div>
+</div> -->
+<br>
+<div class="row">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-5">
+    <p>Living in a world that is over saturated with negativity and division,  WILDHEART thought is was time we welcome a community ready to better themselves, encourage others and embrace this uncharted journey of today's world and reshaping of tomorrows. WH encourages you to grab a cup of coffee and relax, read, laugh, be inspired, be better and thrive.</p>
+    <p>We have recognized that all too often our dreams, personalities and preferences are based on the cookie cutter premises of what society deems acceptable or shouts you out of, but here you will discover an assortment of topics and people who are allowing their hearts to take flight, create and live life as they were created...unabashed and wild.</p>
+  </div>
+  <div class="col-md-4">
+    <%= image_tag "stage.jpg", class: 'width-300' %>
+  </div>
 </div>
-
-<div class="section-header">
-  <h2 class="block-font">MEET THE TEAM</h2>
-</div>
-<div class="team">
-  <div class="row team-row">
-    <div class="col-md-2">
-      <%= image_tag "home.jpg", class: 'img-rounded' %>
-    </div>
-    <div class="col-md-7">
-      <p><span class="bold">Someone</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+<br>
+<br>
+<div class="block">
+  <div class="section-header">
+    <h2 class="block-font">MEET THE TEAM</h2>
   </div>
-  <div class="row team-row">
-    <div class="col-md-7">
-      <p><span class="bold">Someone Else</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+  <div class="team">
+    <div class="row team-row">
+      <div class="col-md-3">
+        <%= image_tag "home.jpg", class: 'img-rounded' %>
+      </div>
+      <div class="col-md-6">
+        <p><span class="bold">Someone</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
     </div>
-    <div class="col-md-2">
-      <%= image_tag "home.jpg", class: 'img-rounded' %>
+    <div class="row team-row">
+      <div class="col-md-6">
+        <p><span class="bold">Someone Else</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+      </div>
+      <div class="col-md-3">
+        <%= image_tag "home.jpg", class: 'img-rounded' %>
+      </div>
     </div>
-  </div>
-  <div class="row team-row">
-    <div class="col-md-2">
-      <%= image_tag "home.jpg", class: 'img-rounded' %>
-    </div>
-    <div class="col-md-7">
-      <p><span class="bold">Mr. Person</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-    </div>
-  </div>
-  <div class="row team-row">
-    <div class="col-md-7">
-      <p><span class="bold">Mrs. Lady</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi..</p>
-    </div>
-    <div class="col-md-2">
-      <%= image_tag "home.jpg", class: 'img-rounded' %>
+    <div class="row team-row">
+      <div class="col-md-3">
+        <%= image_tag "home.jpg", class: 'img-rounded' %>
+      </div>
+      <div class="col-md-6">
+        <p><span class="bold">Mr. Person</span><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+      </div>
     </div>
   </div>
 </div>
@@ -73,7 +80,6 @@
 
 
 <div class="footer">
-  <hr id="footer">
   <p class="grey-text">@wildheart  <a href="https://www.facebook.com/1WILDHEART/" target="_blank" class="fa fa-facebook fa-lg"></a>      <a href="https://www.instagram.com/wildheart_ig/?hl=en" class="fa fa-instagram fa-lg" target="_blank"></a>
 </p>
 </div>
