--- a/app/views/pages/pirates.html.erb
+++ b/app/views/pages/pirates.html.erb
@@ -1,12 +1,41 @@
-<%= video_tag "p&p.mp4", class: "pirates-video", autoplay: true, loop: "loop" %>
+<!-- <%= video_tag "p&p.mp4", class: "pirates-video", autoplay: true, loop: "loop" %> -->
 
-<div class="blurp">
-  <h2>About</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="pirates-header row">
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-3">
+    <h1>PIRATES &</h1>
+    <h1>PREACHER</h1>
+    <div class="pink-color"></div>
+  </div>
+  <div class="col-md-6">
+    <div class="pp-intro">
+      <p><strong>Pirates & Preacher</strong> is a place wheres stories are told, hearts are shared and inspiration is captured. From personal testimonies of people just like you, creative writings, original art pieces and so much more, P&P is just that. A home for people to showcase who they are and allow their passions to far outweigh their fears. Follow daring young men and women as they pursue a life lived in stride towards 100% losing all inhibitions and fear of judgement as they share thier most random thoughts...artistically.</p>
+
+      <p>We encourage you to take these features beyond what they are at surface level; reflect and share. We at <strong>WILDHEART</strong> hearten you to be inspired and dare to dream BIGGER.</p>
+
+      <p>Share your stories with us at <strong>piratesandpreacher@gmail.com</strong></p>
+    </div>
+  </div>
+</div>
+
+<br>
+<div class="row">
+  <h2>YOUR HOST</h2>
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-5 left">
+    <%= image_tag "jeff.jpg", class: 'width-300' %>
+  </div>
+  <div class="col-md-5 right">
+    <p>Hello. I am Jeffery. Such a simple phrase of basic introduction, that we give people all the time; yet the depth of this statement (if ever given the opportunity to reveal), is phenomenal! I think we often hide behind a name, or the common "Hi, how are you" and don't give enough time and effort to the person we are talking to. When do we get real?</p>
+
+    <p>I'm hoping that through Thrive100, we can quit playing "house" and that you will be inspired to tell your story, and allow others to share theirs. It is truly a remarkable thing when you can live as you were created, because there is genuine influence when you are real and transparent. If you can fearlessly share your testimony, trials and victories and simply be who you are today, you can now move others to do the same. We have to choose to stop living as pretentious brainwashed robots, and start living as human beings. It is then, that humanity is revealed and we can begin to understand one another, embrace imperfections and plant seeds of hope. Imagine if we looked past pigmentation and saw God's creation, taking the time to ask, to listen and understand. It's 2017 and I'm done doing things the way they've "always been done." It's time to disregard personal agendas and let love grow.</p>
+  </div>
 </div>
 
 
+
 <div class="footer">
-  <hr id="footer">
   <p class="grey-text">pirates&preacher   <a href="https://www.instagram.com/piratesandpreacher/" class="fa fa-instagram fa-lg" target="_blank"></a></p>
 </div>
